# sicp

./: Makefile  README.md  pyproject.toml  setup.cfg
sicp/: __init__.py
sicp/chapter1/: __init__.py
sicp/chapter1/exercises/: __init__.py  exercise_1_11.py  exercise_1_12.py  exercise_1_3.py  exercise_1_7.py  exercise_1_8.py
sicp/chapter1/src/: __init__.py  part_1_1_4.py  part_1_1_6.py  part_1_1_7.py  part_1_2_1.py  part_1_2_2.py
tests/chapter1/exercises/: test_exercise_1_11.py  test_exercise_1_12.py  test_exercise_1_3.py  test_exercise_1_7.py  test_exercise_1_8.py
tests/chapter1/src/: test_part_1_1_4.py  test_part_1_1_6.py  test_part_1_1_7.py  test_part_1_2_1.py  test_part_1_2_2.py
