[tool.poetry]
name = "sicp"
version = "0.1.0"
description = "Solving of exercises from SICP book"
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
